- Implemented: Added support for short term data in the custom temperature graph
- Changed: Application Settings
- Fixed: Push On delayed Off was not working
- Fixed: RFXtrx USB mode option in hardware settings
- Fixed: Fixed 'Better day value calculation' for multimeter devices (Like P1 Smart Meter electra)
- Implemented: Multi language support for sensors/switch names

Version 1.0.412 (April 1th 2013)
- Fixed: Siren icon on dashboard
- Implemented: New layout, dropdown menu, hardware moved to setting dropdown
- Implemented: Chart tooltip now includes weekday
- Fixed: Option to enlarge the short-log (5 minutes)
- Fixed: Dim slider using now values 1 till ... , 1=Off
- Implemented: New Log mechanism (needed later for log viewer)
- Implemented: command line option '-logfile'
- Implemented: Log Window
- Implemented: Minimized log traffic from server to client
- Implemented: Option to set RFXCOM Mode (enable/disable protocols)
- Implemented: Displaying of RFXCOM Firmware
- Fixed: Deleting a device now also deleted the schedules
- Fixed: Loading schedules only for used devices, deleting otherwise
- Fixed: Stopping of Domoticz with Domoticz share could take 30 seconds, should be 1 not
- Fixed: Domoticz startup script, restart, time between stop en start set at 4 seconds
- Implemented: Mobile desktop, shortcuts for actual tab page
- Implemented: Combined LaCrosse TX3 Temp + Humidity sensor as one new device
- Implemented: Ability to change page / bookmark page using # on url
- Fixed: After/Before Sunset/Sunrise when starting the application (could be triggered next day)
- Implemented: Wind Direction Icons
- Changed: Drag/Dropping sensors now inserts instead of swapping items
- Fixed: KD101 smoke detector battery indication (has none)
- Implemented: Windows, if user has NO admin rights, the Domoticz database will be created in %ProgramData%\Domoticz folder
- Implemented: Windows, no longer need admin rights
- Fixed: Barometer did not show on the dashboard under weather