@@ -217,18 +217,6 @@
 				<td><input type="input" id="RandomSpread" name="RandomSpread" style="width: 50px; padding: .2em;" class="text ui-widget-content ui-corner-all" /> (Minutes +/-)</td>
 			</tr>
 			</table>
-			<br>
-			<h2>Rego 6XX Sensor:</h2>
-			<table class="display" id="rego6xxtable" border="0" cellpadding="0" cellspacing="0">
-				<tr>
-					<td align="right" style="width:60px"><label>Type: </label></td>
-					<td><select id="comborego6xxtype" name="Rego6XXType" style="width:200px" class="combobox ui-corner-all">
-						<option value="0">600-635, 637 single language</option>
-						<option value="1">636</option>
-						<option value="2">637 multi language</option>
-					</select></td>
-				</tr>
-			</table>
 		</section>
 		<br>
 		<section id="savesettings">
@@ -365,9 +353,6 @@ function ShowSettings()
       }
       if (typeof data.UseAutoUpdate != 'undefined') {
         $("#autoupdatetable #checkforupdates").prop('checked',data.UseAutoUpdate==1);
-      }
-      if (typeof data.Rego6XXType != 'undefined') {
-        $("#rego6xxtable #comborego6xxtype").val(data.Rego6XXType);
       }
      }
   });
